--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Protect and beautify your shell scripting",
   "main": "index.js",
   "scripts": {
+    "build:parser": "babel src/parser.js -d lib",
+    "build:ts": "tsc --outDir lib",
+    "build": "yarn build:parser && yarn build:ts",
     "test": "jest"
   },
   "repository": {
@@ -20,9 +23,15 @@
   },
   "homepage": "https://github.com/geelen/shellac#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.12.7",
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "reghex": "^1.0.2"
   }
 }
