--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
+    "execa": "^4.1.0",
     "reghex": "^1.0.2"
   }
 }
