--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.12.7",
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
+    "tmp-promise": "^3.0.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
