--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shellac",
-  "version": "0.5.0",
+  "version": "0.6.0-0",
   "description": "Protect and beautify your shell scripting",
   "keywords": [
     "shell"
