--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
   "license": "MIT",
   "author": "Glen Maddern",
   "main": "lib/index.js",
+  "module": "esm/index.js",
   "types": "lib/index.d.ts",
   "files": [
-    "/lib"
+    "/lib",
+    "/esm"
   ],
   "scripts": {
     "build": "yarn build:parser && yarn build:ts",
     "build:parser": "babel src/parser.js -d lib",
-    "build:ts": "tsc --outDir lib",
+    "build:ts": "tsc --outDir lib && tsc --module esnext --outDir esm",
     "dev": "run-p -l 'build:parser --watch' 'build:ts --watch'",
     "prepack": "npm run build",
     "test": "jest"
