--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "build": "yarn build:parser && yarn build:ts",
-    "build:parser": "babel src/parser.js -d lib",
+    "build:parser": "babel src/grammar.js -d lib",
     "build:ts": "tsc --outDir lib && tsc --module esnext --outDir esm",
     "dev": "run-p -l 'build:parser --watch' 'build:ts --watch'",
     "prepack": "npm run build",
