--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,12 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "loose": true,
+        "modules": false
+      }
+    ]
+  ],
   "plugins": ["reghex/babel"]
 }
