--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
   "type": "module",
   "main": "esm/index.js",
   "module": "esm/index.js",
-  "types": "lib/index.d.ts",
+  "types": "esm/index.d.ts",
   "files": [
     "/lib",
     "/esm"
   ],
   "scripts": {
     "build": "yarn build:parser && yarn build:ts",
-    "build:parser": "babel src/grammar.js -o lib/grammar.cjs",
+    "build:parser": "babel src/grammar.js -d esm",
     "build:ts": "tsc --outDir lib && tsc --module esnext --outDir esm",
     "dev": "run-p -l 'build:parser --watch' 'build:ts --watch'",
     "prepack": "npm run build",
-    "test": "jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
     "reghex": "^1.0.2"
@@ -41,10 +41,10 @@
     "@types/fs-extra": "^9.0.4",
     "@types/jest": "^26.0.15",
     "fs-extra": "^9.0.1",
-    "jest": "^26.6.3",
+    "jest": "^27.4.7",
     "npm-run-all": "^4.1.5",
     "tmp-promise": "^3.0.2",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.1.2"
   }
 }
