--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "build": "yarn build:parser && yarn build:ts",
     "build:parser": "babel src/grammar.js -d dist",
-    "build:ts": "tsup src/index.ts --format esm,cjs",
+    "build:ts": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "run-p -l 'build:parser --watch' 'build:ts --watch'",
     "prepack": "npm run build",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
