--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "/dist"
   ],
   "scripts": {
-    "build": "yarn build:parser && yarn build:ts",
+    "build": "pnpm build:parser && pnpm build:ts",
     "build:parser": "babel src/grammar.js -d dist",
     "build:ts": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "run-p -l 'build:parser --watch' 'build:ts --watch'",
-    "prepack": "npm run build",
+    "prepack": "pnpm build",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
