--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^27.4.7",
     "npm-run-all": "^4.1.5",
     "tmp-promise": "^3.0.2",
+    "tree-node-cli": "^1.6.0",
     "ts-jest": "^27.1.3",
     "tsup": "^6.1.2",
     "typescript": "^4.1.2"
