--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jest": "^26.0.15",
     "fs-extra": "^9.0.1",
     "jest": "^27.4.7",
+    "just-pick": "^4.2.0",
     "npm-run-all": "^4.1.5",
     "tmp-promise": "^3.0.2",
     "tree-node-cli": "^1.6.0",
